--- a/translations/base-en.yaml
+++ b/translations/base-en.yaml
@@ -595,6 +595,11 @@ settings:
             description: >-
                 If enabled, all buildings will stay selected after placement until you cancel it. This is equivalent to holding SHIFT permanently.
 
+        beltDragging:
+            title: Belt drag&drop
+            description: >-
+                If enabled, Conveyor belts will not be placed instantly anymore. Instead, they will be placed in straight lines by clicking, moving the mouse and releasing the place button.
+
         offerHints:
             title: Hints & Tutorials
             description: >-
